// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`u-region-select.vue > Demo-Placeholder 1`] = `
<div>
  <div class="root">
    <div class="root input" readonly="readonly">
      <span class="baseline">b</span>
      <span class="placeholder">请选择省份</span>
      <!---->
      <input class="input" readonly="readonly" type="text">
      <transition-stub class="popperShape" name="fade">
        <div class="root" style="display: none;">
          <div class="root scrollShape" color="light" style="display: inline-block;">
            <div class="wrap">
              <div class="view">
                <nav class="root umenuShape"></nav>
              </div>
            </div>
            <div class="root" direction="horizontal">
              <div class="thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
            </div>
            <div class="root" direction="vertical">
              <div class="thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
            </div>
          </div>
        </div>
      </transition-stub>
      <!---->
    </div>
    <span class="clearable" style="display: none;"></span>
  </div>
</div>
`;

exports[`u-region-select.vue > Demo-仅显示什么区 1`] = `
<div>
  <div class="root">
    <div class="root input" readonly="readonly">
      <span class="baseline">b</span>
      <span class="placeholder">请选择</span>
      <!---->
      <input class="input" readonly="readonly" type="text">
      <transition-stub class="popperShape" name="fade">
        <div class="root" style="display: none;">
          <div class="root scrollShape" color="light" style="display: inline-block;">
            <div class="wrap">
              <div class="view">
                <nav class="root umenuShape"></nav>
              </div>
            </div>
            <div class="root" direction="horizontal">
              <div class="thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
            </div>
            <div class="root" direction="vertical">
              <div class="thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
            </div>
          </div>
        </div>
      </transition-stub>
      <!---->
    </div>
    <span class="clearable" style="display: none;"></span>
  </div>
</div>
`;

exports[`u-region-select.vue > Demo-双向绑定 1`] = `
<div class="root">
  <div class="root input" readonly="readonly">
    <span class="baseline">b</span>
    <span class="placeholder">请选择</span>
    <!---->
    <input class="input" readonly="readonly" type="text">
    <transition-stub class="popperShape" name="fade">
      <div class="root" style="display: none;">
        <div class="root scrollShape" color="light" style="display: inline-block;">
          <div class="wrap">
            <div class="view">
              <nav class="root umenuShape"></nav>
            </div>
          </div>
          <div class="root" direction="horizontal">
            <div class="thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
          </div>
          <div class="root" direction="vertical">
            <div class="thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
          </div>
        </div>
      </div>
    </transition-stub>
    <!---->
  </div>
  <span class="clearable" style="display: none;"></span>
</div>
`;

exports[`u-region-select.vue > Demo-基本用法 1`] = `
<div class="root">
  <div class="root input" readonly="readonly">
    <span class="baseline">b</span>
    <span class="placeholder">请选择</span>
    <!---->
    <input class="input" readonly="readonly" type="text">
    <transition-stub class="popperShape" name="fade">
      <div class="root" style="display: none;">
        <div class="root scrollShape" color="light" style="display: inline-block;">
          <div class="wrap">
            <div class="view">
              <nav class="root umenuShape"></nav>
            </div>
          </div>
          <div class="root" direction="horizontal">
            <div class="thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
          </div>
          <div class="root" direction="vertical">
            <div class="thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
          </div>
        </div>
      </div>
    </transition-stub>
    <!---->
  </div>
  <span class="clearable" style="display: none;"></span>
</div>
`;

exports[`u-region-select.vue > Demo-基本用法 2`] = `
<div>
  <div class="root" direction="vertical" type vusion-slot-name="default">
    <div class="root">
      <div class="root input" readonly="readonly">
        <span class="baseline">b</span>
        <span class="placeholder">请选择</span>
        <!---->
        <input class="input" readonly="readonly" type="text">
        <transition-stub class="popperShape" name="fade">
          <div class="root" style="display: none;">
            <div class="root scrollShape" color="light" style="display: inline-block;">
              <div class="wrap">
                <div class="view">
                  <nav class="root umenuShape"></nav>
                </div>
              </div>
              <div class="root" direction="horizontal">
                <div class="thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
              </div>
              <div class="root" direction="vertical">
                <div class="thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
              </div>
            </div>
          </div>
        </transition-stub>
        <!---->
      </div>
      <span class="clearable" style="display: none;"></span>
    </div>
    <div class="root" defaultvalue="浙江省 / 杭州市 / 滨江区">
      <div class="root input" readonly="readonly">
        <span class="baseline">b</span>
        <span class="placeholder">请选择</span>
        <!---->
        <input class="input" readonly="readonly" type="text">
        <transition-stub class="popperShape" name="fade">
          <div class="root" style="display: none;">
            <div class="root scrollShape" color="light" style="display: inline-block;">
              <div class="wrap">
                <div class="view">
                  <nav class="root umenuShape"></nav>
                </div>
              </div>
              <div class="root" direction="horizontal">
                <div class="thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
              </div>
              <div class="root" direction="vertical">
                <div class="thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
              </div>
            </div>
          </div>
        </transition-stub>
        <!---->
      </div>
      <span class="clearable" style="display: none;"></span>
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`u-region-select.vue > Demo-转换为地区名格式 1`] = `
<div class="root">
  <div class="root input" readonly="readonly">
    <span class="baseline">b</span>
    <span class="placeholder"></span>
    <!---->
    <input class="input" readonly="readonly" type="text">
    <transition-stub class="popperShape" name="fade">
      <div class="root" style="display: none;">
        <div class="root scrollShape" color="light" style="display: inline-block;">
          <div class="wrap">
            <div class="view">
              <nav class="root umenuShape"></nav>
            </div>
          </div>
          <div class="root" direction="horizontal">
            <div class="thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
          </div>
          <div class="root" direction="vertical">
            <div class="thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
          </div>
        </div>
      </div>
    </transition-stub>
    <!---->
  </div>
  <span class="clearable" style="display: none;"></span>
</div>
`;

exports[`u-region-select.vue > Demo-转换为地区码格式 1`] = `
<div class="root">
  <div class="root input" readonly="readonly">
    <span class="baseline">b</span>
    <span class="placeholder"></span>
    <!---->
    <input class="input" readonly="readonly" type="text">
    <transition-stub class="popperShape" name="fade">
      <div class="root" style="display: none;">
        <div class="root scrollShape" color="light" style="display: inline-block;">
          <div class="wrap">
            <div class="view">
              <nav class="root umenuShape"></nav>
            </div>
          </div>
          <div class="root" direction="horizontal">
            <div class="thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
          </div>
          <div class="root" direction="vertical">
            <div class="thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
          </div>
        </div>
      </div>
    </transition-stub>
    <!---->
  </div>
  <span class="clearable" style="display: none;"></span>
</div>
`;

exports[`u-region-select.vue > Demo-过滤（可搜索） 1`] = `
<div>
  <div class="root">
    <div class="root input">
      <span class="baseline">b</span>
      <span class="placeholder">请选择</span>
      <!---->
      <input class="input" type="text">
      <transition-stub class="popperShape" name="fade">
        <div class="root" style="display: none;">
          <div class="root scrollShape" color="light" style="display: inline-block;">
            <div class="wrap">
              <div class="view">
                <nav class="root umenuShape"></nav>
              </div>
            </div>
            <div class="root" direction="horizontal">
              <div class="thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
            </div>
            <div class="root" direction="vertical">
              <div class="thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
            </div>
          </div>
        </div>
      </transition-stub>
      <!---->
    </div>
    <span class="clearable" style="display: none;"></span>
  </div>
</div>
`;
